--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ ntex-session = "0.4.0"
 ntex-files = "0.4.1"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+toml = "0.8.13"
+serde = { version = "1.0.203", features = ["derive"] }
